[package]
name = "rust-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4"
nix = "0.19.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prctl = "1.0.0"
libc = "0.2.84"
fern = "0.6"
chrono = "0.4"
anyhow = "1.0"
clap = { version = "4.3.8", features = ["derive"] }
mio = { version = "0.7", features = ["os-ext", "os-poll"] }
procfs = "0.9.1"
