[package]
name = "rust-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4"
nix = "0.19.1"
##serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#prctl = "1.0.0"
#libc = "0.2.84"
fern = "0.6"
anyhow = "1.0"
clap = { version = "4.3.8", features = ["derive"] }
mio = { version = "0.7", features = ["os-ext", "os-poll"] }

bitflags = "2.4.1"
caps = "0.5.5"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
fastrand = "^2.0.1"
libc = "0.2.151"
oci-spec = { version = "~0.6.4", features = ["runtime"] }
once_cell = "1.19.0"
procfs = "0.9.1"
prctl = "1.0.0"
libseccomp = { version = "0.3.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-criu = "0.4.0"
protobuf = "= 3.2.0" # https://github.com/checkpoint-restore/rust-criu/issues/19
regex = "1.10.2"
thiserror = "1.0.51"
tracing = { version = "0.1.40", features = ["attributes"] }
safe-path = "0.1.0"

[dev-dependencies]
oci-spec = { version = "~0.6.4", features = ["proptests", "runtime"] }
quickcheck = "1"
serial_test = "2.0.0"
tempfile = "3"
anyhow = "1.0"
rand = { version = "0.8.5" }
